--- a/Poengrenn.Web/src/app/competition/competition-details/person-modal/person-modal.component.html
+++ b/Poengrenn.Web/src/app/competition/competition-details/person-modal/person-modal.component.html
@@ -65,6 +65,6 @@
   </form>
 </div>
 <div class="modal-footer">
-  <button type="submit" class="btn btn-primary" [disabled]="!addCompetitionParticipantForm.valid" (click)="saveCompetitionParticipant()">Opprett</button>
+  <button type="submit" class="btn btn-primary" [disabled]="!addCompetitionParticipantForm.valid" (click)="saveCompetitionParticipant()">Lagre</button>
   <button type="button" class="btn btn-secondary" (click)="_activeModal.close('Close click')">Lukk</button>
 </div>
