--- a/Poengrenn.Web/src/app/competition/competition-details/competition-details.component.html
+++ b/Poengrenn.Web/src/app/competition/competition-details/competition-details.component.html
@@ -19,7 +19,7 @@
         <span class="input-group-btn">
           <button class="btn btn-secondary" type="button" (click)="setSelectedPerson(null)"><i class="fa fa-times" aria-hidden="true"></i></button>
         </span>
-        <span class="input-group-btn" *ngIf="selectedPerson && isMe()">
+        <span class="input-group-btn" *ngIf="selectedPerson && (isMe() || isAdmin())">
           <button type="submit" class="btn btn-primary" (click)="openPersonModal(selectedPerson)"><i class="fa fa-pencil" aria-hidden="true"></i> Rediger person...</button>
         </span>
         <span class="input-group-btn" >
@@ -32,7 +32,15 @@
       Du må logge inn for å kunne melde deg på. <a class="nav-link" routerLink="/login"><i class="fa fa-user" aria-hidden="true"></i> Logg inn her</a>
     </div>
     <div class="mt-3" *ngIf="lastAddedPerson">
-      <div class="alert alert-success">Sist lagt til: {{lastAddedPerson?.fornavn}} {{lastAddedPerson?.etternavn}}</div>
+      <div class="alert alert-success">
+        Sist lagt til: {{lastAddedPerson?.fornavn}} {{lastAddedPerson?.etternavn}}
+        <h5>Startnummer: {{lastAddedStartNumber}}</h5>
+      </div>
+    </div>
+    <div class="mt-3" *ngIf="updateMessage">
+      <div class="alert alert-success">
+          <span [innerHtml]="updateMessage"></span>
+        </div>
     </div>
     
     <div *ngIf="isAdmin() || isMe()">
@@ -57,54 +65,73 @@
     </div>
 
     <div class="deltakere mt-3">
-      <div class="filter row m-1">
-        
-        <div class="col-12">
-          <label class="font-weight-bold">Filtrer på kjønn:</label>
-          <div>
-            <div class="form-check form-check-inline col-lg-3 col-md-4 col-sm-6" *ngFor="let g of genders">
-              <label class="form-check-label">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox1" 
-                [value]="g.id"
-                (change)="onFilterChange($event, 'gender', g.id)"> 
-                {{g?.navn}}
-              </label>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-12">
-          <label class="font-weight-bold">Filtrer på konkurranseklasse:</label>
-          <div>
-            <div class="form-check form-check-inline col-lg-3 col-md-4 col-sm-6" *ngFor="let compClass of competitionClasses">
-              <label class="form-check-label">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox1" 
-                [value]="compClass.klasseID"
-                (change)="onFilterChange($event, 'klasseID', compClass.klasseID)"> 
-                {{(compClass?.navn) ? compClass?.navn : compClass?.klasseID}}
-              </label>
-            </div>
-          </div>
-        </div>
-      </div>
-
       <button *ngIf="isAdmin()" type="submit" class="btn btn-primary float-right" (click)="openEditResultsModal()">Registrer resultater...</button>
       
       <table class="table table-striped">
         <thead>
           <tr>
-            <th>#</th>
-            <th>Fornavn</th>
-            <th>Etternavn</th>
-            <th>Kjønn</th>
-            <th>Klasse</th>
-            <th>Tid</th>
-            <th *ngIf="isAdmin()">Tilstede</th>
-            <th *ngIf="isAdmin()">Bet.</th>
+            <th (click)="orderParticipantsBy('startnummer')" class="clickable">#</th>
+            <th (click)="orderParticipantsBy('fornavn')" class="clickable">Fornavn</th>
+            <th (click)="orderParticipantsBy('etternavn')" class="clickable">Etternavn</th>
+            <th (click)="orderParticipantsBy('gender')" class="clickable">Kjønn</th>
+            <th (click)="orderParticipantsBy('klasseID')" class="clickable">Klasse</th>
+            <th (click)="orderParticipantsBy('tidsforbruk')" class="clickable">Tid</th>
+            <th *ngIf="isAdmin()" (click)="orderParticipantsBy('tilstede')" class="clickable">Tilstede</th>
+            <th *ngIf="isAdmin()" (click)="orderParticipantsBy('betalt')" class="clickable">Bet.</th>
             <th></th>
           </tr>
         </thead>
         <tbody>
+          <tr>
+            <td><input type="text" [ngModel]="filter.startNumber" (change)="onFilterStartNumber($event)" [ngClass]="{'text-alert': filter.startNumber}" class="form-control form-control-sm" style="width: 60px" name="filterStartNumber" width="10"/></td>
+            <td><input type="text" [ngModel]="filter.firstname" (change)="onFilterFirstname($event)" class="form-control form-control-sm" name="filterFirstname"/></td>
+            <td><input type="text" [ngModel]="filter.lastname" (change)="onFilterLastname($event)" class="form-control form-control-sm" name="filterLastname"/></td>
+            <td>
+              <!-- Filter gender -->
+              <button (click)="showGenderFilter = !showGenderFilter" class="btn btn-secondary btn-sm" type="button" aria-haspopup="true" aria-expanded="false">
+                <span [ngClass]="{'text-alert': filter.genders.length > 0}">{{(filter.genders.length == 0) ? 'Velg' : filter.genders}}</span>
+                <i class="fa" [ngClass]="{'fa-angle-down': !showGenderFilter, 'fa-angle-up': showGenderFilter}" aria-hidden="true"></i>
+              </button>
+              <div class="card" style="position: absolute;" *ngIf="showGenderFilter">
+                <ul class="list-group list-group-flush" *ngFor="let g of genders">
+                  <li class="list-group-item">
+                    <input class="" type="checkbox" id="checkboxGender" 
+                        [value]="g.id"
+                        [checked]="filter.genders.indexOf(g.id) > -1"
+                        (change)="onFilterChange($event, 'gender', g.id)"> 
+                    <span class="ml-1">{{g?.navn}}</span>
+                  </li>
+                </ul>
+              </div>
+            </td>
+            <td>
+              <!-- Filter klasseID -->
+              <button (click)="showClassIDFilter = !showClassIDFilter" class="btn btn-secondary btn-sm" type="button" aria-haspopup="true" aria-expanded="false">
+                <span [ngClass]="{'text-alert': filter.competitionClasses.length > 0}">{{(filter.competitionClasses.length == 0) ? 'Velg' : ((filter.competitionClasses.length == 1) ? filter.competitionClasses[0] : 'Flere valg')}}</span>
+                <i class="fa" [ngClass]="{'fa-angle-down': !showClassIDFilter, 'fa-angle-up': showClassIDFilter}" aria-hidden="true"></i>
+              </button>
+              <div class="card" style="position: absolute;" *ngIf="showClassIDFilter">
+                <ul class="list-group list-group-flush" *ngFor="let compClass of competitionClasses">
+                  <li class="list-group-item">
+                    <input class="" type="checkbox" id="checkboxKlasseID" 
+                          [value]="compClass.klasseID"
+                          [checked]="filter.competitionClasses.indexOf(compClass.klasseID) > -1"
+                          (change)="onFilterChange($event, 'klasseID', compClass.klasseID)"> 
+                    <span class="ml-1">{{(compClass?.navn) ? compClass?.navn : compClass?.klasseID}}</span>
+                  </li>
+                </ul>
+              </div>
+
+            </td>
+            <td></td>
+            <td *ngIf="isAdmin()">
+              <!-- Tilstede -->
+            </td>
+            <td *ngIf="isAdmin()">
+              <!-- Betalt -->
+            </td>
+            <td></td>
+          </tr>
           <tr *ngFor="let deltaker of filteredParticpants">
             <th scope="row">{{deltaker?.startNummer}}</th>
             <td>{{deltaker?.person?.fornavn}}</td>
