--- a/Poengrenn.Web/src/app/competition/competition-details/edit-competition-participant-modal/edit-competition-participant-modal.component.html
+++ b/Poengrenn.Web/src/app/competition/competition-details/edit-competition-participant-modal/edit-competition-participant-modal.component.html
@@ -43,6 +43,28 @@
           </div>
         </div>
         <div class="row">
+            <div class="col row">
+              <div class="form-group col">
+                <label class="font-weight-bold" for="tilstede">Tilstede</label>
+                <br/>
+                <label class="form-check-label">
+                  <input [(ngModel)]="participant.tilstede" type="checkbox" class="form-check-input" name="tilstede" placeholder="">
+                </label>
+              </div>
+              <div class="form-group col">
+                <label class="font-weight-bold" for="betalt">Betalt</label>
+                <br/>
+                <label class="form-check-label">
+                  <input [(ngModel)]="participant.betalt" type="checkbox" class="form-check-input" name="betalt" placeholder="">
+                </label>
+              </div>
+            </div>
+            <div class="form-group col">
+              <label class="font-weight-bold" for="betalingsNotat">Betalingsnotat</label>
+              <input [(ngModel)]="participant.betalingsNotat" type="text" class="form-control" name="betalingsNotat" placeholder="">
+            </div>
+        </div>
+        <div class="row">
           <div class="form-group col">
             <label class="font-weight-bold" for="starttid">Starttid</label>
             <input [(ngModel)]="participant.startTid" disabled type="string" class="form-control" name="starttid" placeholder="">
