--- a/Poengrenn.Web/src/app/auth/login/user-login.component.html
+++ b/Poengrenn.Web/src/app/auth/login/user-login.component.html
@@ -1,5 +1,12 @@
 <div class="col-md-10 col-md-offset-2">
     <h2>Logg inn</h2>
+    <div class="">
+      <ol>
+        <li>Søk frem og velg deltakerens navn under Finn person</li>
+        <li>Skriv inn e-postadresse eller mobilnr. Her er e-post og mobilnr. i Flatås IL sine systemer lagt inn for medlemmer i Flatås Langrenn.</li>
+      </ol>
+    </div>
+    
     <form name="form" (ngSubmit)="loginform.form.valid && login()" #loginform="ngForm" novalidate>
         <div class="form-group" [ngClass]="{ 'has-error': loginform.submitted && !model.brukernavn }">
             <!-- <label for="brukernavn">Brukernavn</label>
@@ -40,4 +47,20 @@
           <span [innerHtml]="errorMessage"></span>
         </div>
     </form>
+    <div>
+      <ul>
+        <li>
+            <h6>Jeg finner ikke deltakeren i listen</h6>
+            <strong>Svar:</strong><br/>
+            Gå inn på aktuelt løp og klikk "Opprett person". E-postadressen eller telefonnr. du skriver inn her brukes ved pålogging.
+        </li>
+        <li class="mt-3">
+            <h6>Jeg finner deltakeren i listen, men jeg får ikke logget inn</h6>
+            <strong>Svar 1:</strong><br/>
+            Prøv først en annen e-postadresse eller mobilnr. Har deltakeren vært medlem i Flatås Langrenn brukes e-post/mobilnr. fra Flatås IL sine systemer<br/>
+            <strong>Svar 2:</strong><br/>
+            Får du fortsatt ikke logget inn, send en e-post med hvilke personer du ønsker å melde på til sonja.askim@gmail.com
+        </li>
+      </ul>
+    </div>
 </div>
