--- a/Poengrenn.Web/src/app/auth/login/user-login.component.html
+++ b/Poengrenn.Web/src/app/auth/login/user-login.component.html
@@ -3,7 +3,7 @@
     <div class="">
       <ol>
         <li>Søk frem og velg deltakerens navn under Finn person</li>
-        <li>Skriv inn e-postadresse eller mobilnr. Her er e-post og mobilnr. i Flatås IL sine systemer lagt inn for medlemmer i Flatås Langrenn.</li>
+        <li>Skriv inn e-postadresse eller mobilnr. <br/>For medlemmer av Flatås Langrenn er e-post og mobilnr. fra Flatås IL sine systemer er lagt inn.</li>
       </ol>
     </div>
     
@@ -57,9 +57,9 @@
         <li class="mt-3">
             <h6>Jeg finner deltakeren i listen, men jeg får ikke logget inn</h6>
             <strong>Svar 1:</strong><br/>
-            Prøv først en annen e-postadresse eller mobilnr. Har deltakeren vært medlem i Flatås Langrenn brukes e-post/mobilnr. fra Flatås IL sine systemer<br/>
+            Prøv først en annen e-postadresse eller mobilnr. Er deltakeren medlem i Flatås Langrenn brukes e-post/mobilnr. fra Flatås IL sine systemer<br/>
             <strong>Svar 2:</strong><br/>
-            Får du fortsatt ikke logget inn, send en e-post med hvilke personer du ønsker å melde på til sonja.askim@gmail.com
+            Får du fortsatt ikke logget inn, send en e-post med hvilke personer du ønsker å melde på til <a href='mailto:sonja.askim@gmail.com'>sonja.askim@gmail.com</a>
         </li>
       </ul>
     </div>
