--- a/Poengrenn.Web/src/app/competition/competition-details/competition-details.component.html
+++ b/Poengrenn.Web/src/app/competition/competition-details/competition-details.component.html
@@ -43,17 +43,6 @@
     <div *ngIf="!isAdmin() && !isMe() && !!selectedPerson" class="alert alert-danger">
       Du må logge inn for å kunne melde deg på. <a class="nav-link" routerLink="/login"><i class="fa fa-user" aria-hidden="true"></i> Logg inn her</a>
     </div>
-    <div class="mt-3" *ngIf="lastAddedPerson">
-      <div class="alert alert-success">
-        Sist lagt til: {{lastAddedPerson?.fornavn}} {{lastAddedPerson?.etternavn}}
-        <h5>Startnummer: {{lastAddedStartNumber}}</h5>
-      </div>
-    </div>
-    <div class="mt-3" *ngIf="updateMessage">
-      <div class="alert alert-success">
-          <span [innerHtml]="updateMessage"></span>
-        </div>
-    </div>
     
     <div *ngIf="isAdmin() || isMe()">
       <div class="mt-3" *ngIf="matchingCompetitionClasses">
@@ -75,6 +64,22 @@
         <span *ngIf="!selectedCompetitionClass.klasseID || !canRegister" class="text-danger">{{errorMessage}}</span>
       </div>
     </div>
+
+    <div class="mt-3" *ngIf="lastAddedPerson">
+        <div class="alert alert-success">
+          Sist lagt til: {{lastAddedPerson?.fornavn}} {{lastAddedPerson?.etternavn}}
+          <h5>Startnummer: {{lastAddedStartNumber}}</h5>
+  
+          <div *ngIf="lastAddedPersonMessage">
+            <span class="font-weight-bold text-danger" [innerHtml]="lastAddedPersonMessage"></span>
+          </div>
+        </div>
+      </div>
+      <div class="mt-3" *ngIf="updateMessage">
+        <div class="alert alert-success">
+            <span [innerHtml]="updateMessage"></span>
+          </div>
+      </div>
 
     <div class="deltakere mt-3">
       
