--- a/Poengrenn.Web/src/app/competition/competition-details/register-competition-results-modal/register-competition-results-modal.component.html
+++ b/Poengrenn.Web/src/app/competition/competition-details/register-competition-results-modal/register-competition-results-modal.component.html
@@ -51,15 +51,18 @@
         <div class="row">
           <div class="form-group col">
             <label class="font-weight-bold" for="starttid">Starttid</label>
-            <input [(ngModel)]="currentParticipant.startTid" (change)="updateTidsforbruk()" type="time" step="1" class="form-control" name="starttid" placeholder="">
+            <ngb-timepicker [(ngModel)]="startTime" (change)="updateTidsforbruk()" [spinners]="false" [seconds]="true" name="tp-startTime"></ngb-timepicker>
           </div>
           <div class="form-group col">
             <label class="font-weight-bold" for="sluttid">Sluttid</label>
-            <input [(ngModel)]="currentParticipant.sluttTid" (change)="updateTidsforbruk()" type="time" step="1" class="form-control" name="sluttid" placeholder="">
+            <ngb-timepicker [(ngModel)]="endTime" (change)="updateTidsforbruk()" [spinners]="false" [seconds]="true" name="tp-endtime"></ngb-timepicker>
           </div>
+        </div>
+        <div class="row">
+          <div class="form-group col"></div>
           <div class="form-group col">
             <label class="font-weight-bold" for="tidsforbruk">Tid</label>
-            <input [(ngModel)]="currentParticipant.tidsforbruk" disabled type="time" step="1" class="form-control" name="tidsforbruk" placeholder="">
+            <ngb-timepicker [(ngModel)]="totalTime" [spinners]="false" [seconds]="true" name="tp-totalTime" disabled></ngb-timepicker>
           </div>
         </div>
         <div class="row">
